--- a/app/src/main/res/layout/post_row.xml
+++ b/app/src/main/res/layout/post_row.xml
@@ -79,7 +79,7 @@
                 android:layout_height="40dp"
                 android:id="@+id/comment_BU"
                 android:text="comment"
-                android:background="#FbFbFb"
+                android:background="#3bfbfbfb"
                 android:textAllCaps="false"
                 app:layout_constraintStart_toEndOf="@id/like_BU"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -93,7 +93,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/commentsCount"
-                android:text="10 Comments"
+                tools:text="10 Comments"
                 android:textColor="#212121"
                 android:textSize="15sp"
                 android:textStyle="bold"
