--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,74 +27,71 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/email_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingTop="15dp"
+            android:textColor="#fff"
+            android:textStyle="bold"
+            android:text="@string/email"
+            app:layout_constraintTop_toTopOf="@+id/loginEmail_IL"
+            app:layout_constraintBottom_toBottomOf="@+id/loginEmail_IL"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp" />
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/loginEmail_IL"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textColorHint="#67869d"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/loginPass_IL"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias=".3"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        >
+
+        <EditText
+            android:id="@+id/loginEmail_ET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/loginEmailContainer"
-            android:orientation="horizontal"
+            android:background="@drawable/edittext_bg"
+            android:hint="@string/enter_your_email"
+            android:inputType="textEmailAddress"
             android:padding="5dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView2"
-            android:layout_marginTop="50dp"
-            tools:layout_editor_absoluteY="156dp">
+            android:textColor="#fff" />
+    </android.support.design.widget.TextInputLayout>
+
 
             <TextView
+                android:id="@+id/password_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginEnd="30dp"
-                android:paddingTop="15dp"
                 android:textColor="#fff"
                 android:textStyle="bold"
-                android:text="@string/email"
-                android:layout_marginRight="30dp" />
+                android:text="@string/password"
+                app:layout_constraintStart_toStartOf="@id/email_label"
+                app:layout_constraintTop_toTopOf="@id/loginPass_IL"
+                app:layout_constraintBottom_toBottomOf="@id/loginPass_IL"
+                app:layout_constraintVertical_bias=".6"
+                />
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/loginEmail_IL"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColorHint="#67869d"
-                >
-
-                <EditText
-                    android:id="@+id/loginEmail_ET"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/enter_your_email"
-                    android:padding="5dp"
-                    android:background="@drawable/edittext_bg"
-                    android:inputType="textEmailAddress"
-                    android:textColor="#fff" />
-            </android.support.design.widget.TextInputLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/loginMailContainer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="20dp"
-            android:padding="5dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/loginEmailContainer">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginEnd="5dp"
-                android:layout_marginRight="5dp"
-                android:textColor="#fff"
-                android:textStyle="bold"
-                android:paddingTop="15dp"
-                android:text="@string/password" />
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/loginPass_IL"
-                android:textColorHint="#67869d">
+                android:textColorHint="#67869d"
+                app:layout_constraintStart_toEndOf="@id/password_label"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/loginEmail_IL"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp">
 
                 <EditText
                     android:layout_width="match_parent"
@@ -107,7 +104,6 @@
                     android:id="@+id/loginPass_ET"/>
             </android.support.design.widget.TextInputLayout>
 
-        </LinearLayout>
 
 
         <Button
@@ -118,18 +114,12 @@
             android:background="@drawable/button_bg"
             android:text="@string/login"
             android:textColor="#fff"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+            app:layout_constraintBottom_toTopOf="@+id/donotHaveAccount_label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
 
-        <LinearLayout
-            android:id="@+id/linearLayout2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            >
+
 
             <TextView
                 android:layout_width="wrap_content"
@@ -139,26 +129,30 @@
                 android:gravity="center"
                 android:textStyle="bold"
                 android:textColor="#fff"
-                android:layout_marginLeft="20dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginRight="5dp"
+                android:id="@+id/donotHaveAccount_label"
                 android:text="@string/don_t_have_an_account"
-                android:layout_marginEnd="5dp"
-                 />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="5dp"
+                android:layout_marginLeft="5dp" />
 
             <Button
                 android:id="@+id/gotoSignup_BU"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:background="@null"
-                android:gravity="start|center"
+                android:gravity="start|bottom"
                 android:textAllCaps="false"
                 android:textStyle="bold"
                 android:textSize="20sp"
                 android:textColor="#d23c4f"
-                android:text="@string/signup" />
+                android:text="@string/signup"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/donotHaveAccount_label"
+                app:layout_constraintTop_toTopOf="@id/donotHaveAccount_label"
+                android:layout_marginStart="5dp"
+                android:layout_marginLeft="5dp" />
 
-        </LinearLayout>
-        
+
     </android.support.constraint.ConstraintLayout>
 
