replace deprecated progress dialog with progress bar in signup activity

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -9,6 +9,18 @@
     tools:context="com.ahmdkhled.wechat.activities.SignupActivity"
     >
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/signUp_PB"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
+        app:layout_constraintVertical_bias=".6"
+        />
+
     <TextView
         android:id="@+id/weChat_label"
         android:layout_width="wrap_content"
