--- a/app/src/main/res/layout/sent_message_row.xml
+++ b/app/src/main/res/layout/sent_message_row.xml
@@ -1,26 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:minHeight="40dp"
         android:id="@+id/sentMessage"
         android:background="@drawable/sent_message_bg"
         android:textColor="#fff"
-        tools:text="this is a sent message"
-        android:textSize="25sp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:layout_margin="5dp"
-        app:layout_constraintEnd_toStartOf="@id/seenImg"
+        tools:text="this is a sent message "
+        android:textSize="20sp"
+        android:gravity="center_vertical"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintWidth_default="wrap"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/seenImg"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:layout_marginStart="64dp"
+        android:layout_marginLeft="64dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="25dp"
@@ -29,11 +40,11 @@
         tools:src="@color/colorPrimary"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="@id/sentMessage"
+        app:layout_constraintBottom_toBottomOf="@id/sentMessage"
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp" />
 
 
-
 </android.support.constraint.ConstraintLayout>
+
