--- a/app/src/main/res/layout/received_message_row.xml
+++ b/app/src/main/res/layout/received_message_row.xml
@@ -12,29 +12,39 @@
         android:id="@+id/messageSenderImg"
         tools:src="@drawable/user"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
+        app:layout_constraintTop_toTopOf="@id/receivedMessage"
+        app:layout_constraintBottom_toBottomOf="@id/receivedMessage"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:minHeight="40dp"
         android:id="@+id/receivedMessage"
         android:background="@drawable/received_message_bg"
-        tools:text="this is a received message"
-        android:textSize="25sp"
+        tools:text="this is a received message "
+        android:textSize="20sp"
+        android:gravity="center_vertical"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
         android:textColor="#000"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:layout_margin="5dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintStart_toEndOf="@id/messageSenderImg"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_default="wrap"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginRight="64dp"
         />
 
 
