--- a/app/src/main/res/drawable/comment_container_bg.xml
+++ b/app/src/main/res/drawable/comment_container_bg.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke android:width="1dp"
-        android:color="#000"/>
+        android:color="#9A9C9A9A"/>
     <corners android:radius="45dp"/>
 </shape>
