--- a/app/src/main/res/layout/activity_friends.xml
+++ b/app/src/main/res/layout/activity_friends.xml
@@ -14,16 +14,17 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:inputType="text"
         android:id="@+id/userSearchBox_ET"
-        android:hint="enter user to search for"
+        android:hint="enter friend to search for"
         android:background="@drawable/search_box"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="10dp"
-        android:paddingLeft="5dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:paddingStart="5dp" />
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"/>
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
