--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -15,7 +15,8 @@
         android:id="@+id/friendsLabel"
         android:textAllCaps="false"
         android:textStyle="bold"
-        android:textSize="25sp"
+        android:textSize="20sp"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="5dp"
@@ -56,7 +57,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="#757575"
+                android:background="#E0DEDE"
 
                 android:layout_marginBottom="5dp" />
 
@@ -87,9 +88,10 @@
         android:id="@+id/logingLabel"
         android:textAllCaps="false"
         android:textStyle="bold"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/friendsCardView"
+        android:textColor="@color/colorPrimary"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp" />
