--- a/app/src/main/res/layout/friend_req_row.xml
+++ b/app/src/main/res/layout/friend_req_row.xml
@@ -8,19 +8,20 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardElevation="2dp"
-        app:cardUseCompatPadding="true">
+        app:cardElevation="3dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="5dp">
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp"
             android:background="#fff">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/friendReqImg_IV"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:scaleType="fitXY"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:scaleType="centerCrop"
                 android:contentDescription="@string/friend_reqiest_sender_image"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -30,12 +31,12 @@
                 android:id="@+id/friendReqName_TV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:textSize="25sp"
+                android:layout_marginStart="7dp"
+                android:textSize="20sp"
                 app:layout_constraintStart_toEndOf="@+id/friendReqImg_IV"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="@string/ahmedkhaled"
-                android:textColor="#212121"
+                android:textColor="#494848"
                 android:textStyle="bold"
                 android:layout_marginLeft="10dp" />
 
@@ -43,17 +44,17 @@
             <Button
                 android:id="@+id/acceptRequest_BU"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="5dp"
-                android:background="@color/colorAccent"
+                android:background="@color/colorPrimaryDark"
                 app:layout_constraintStart_toEndOf="@+id/friendReqImg_IV"
                 app:layout_constraintTop_toBottomOf="@+id/friendReqName_TV"
                 android:layout_marginLeft="20dp"
                 android:textColor="#fff"
                 android:textAllCaps="false"
-                android:textStyle="bold"
-                android:text="@string/accept"/>
+                android:text="@string/accept"
+                />
 
 
 
