--- a/app/src/main/res/layout/notification_row.xml
+++ b/app/src/main/res/layout/notification_row.xml
@@ -6,13 +6,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#fff"
-    android:padding="2dp">
+    android:padding="5dp">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/notificationImg"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:scaleType="centerCrop"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:src="@color/colorPrimary" />
 
@@ -22,13 +23,13 @@
         android:id="@+id/notificationBody"
         tools:text="this is a sample notification Body"
         android:textSize="20sp"
-        android:fontFamily="serif"
         android:textColor="#424242"
         app:layout_constraintStart_toEndOf="@id/notificationImg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+        android:layout_marginTop="3dp"
         />
 
 </android.support.constraint.ConstraintLayout>
