--- a/app/src/main/res/layout/users_list_row.xml
+++ b/app/src/main/res/layout/users_list_row.xml
@@ -1,17 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="5dp"
+    android:layout_margin="3dp"
+    app:cardElevation="2dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+<android.support.constraint.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:layout_constraintTop_toTopOf="parent"
+    android:padding="2dp"
+    >
+
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="match_parent"
+        android:layout_height="175dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:src="@drawable/user"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:id="@+id/userImage"/>
 
     <TextView
@@ -20,23 +32,26 @@
         android:id="@+id/userName"
         tools:text="Ahmed Khaled"
         android:textStyle="bold"
-        android:textSize="22sp"
+        android:textSize="20sp"
+        android:textColor="#332F2F"
         app:layout_constraintStart_toStartOf="@id/userImage"
         app:layout_constraintEnd_toEndOf="@id/userImage"
         app:layout_constraintTop_toBottomOf="@id/userImage"/>
 
     <Button
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:text="Add"
         android:id="@+id/add"
         app:layout_constraintTop_toBottomOf="@id/userName"
         app:layout_constraintStart_toStartOf="@id/userName"
         app:layout_constraintEnd_toEndOf="@id/userName"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorPrimaryDark"
         android:textColor="#fff"
         android:textAllCaps="false"
-        android:textSize="20sp"
+        android:textSize="15sp"
+        android:gravity="center"
         />
 
 </android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
